...
import { useDirections } from "@/src/context/DirectionsContext";

function SegmentedToggle({
  campus,
  setCampus,
}: Readonly<{
  campus: "SGW" | "Loyola";
  setCampus: (campus: "SGW" | "Loyola") => void;
}>) {
  const mode = useColorScheme() || "light";
  const insets = useSafeAreaInsets();
  const { isNavigationActive } = useDirections();
  if (isNavigationActive) return null;
...
                padding: 0,
                backgroundColor: "transparent",
              },
            ]}
          >
            <SegmentedControl
              values={["Sir George Williams", "Loyola"]}
              selectedIndex={campus === "SGW" ? 0 : 1}
              onChange={(event) => {
                setCampus(
                  event.nativeEvent.selectedSegmentIndex === 0
                    ? "SGW"
                    : "Loyola",
...
