...
        },
      },
    ].sort((a, b) => a.level - b.level),
  },
  MB: {
    id: "MB",
    name: "John Molson Building",
    defaultFloor: 1,
    floors: [
      {
        id: "MB_S2",
        level: 1,
        label: "S2",
...
