appId: com.conuwalks.app
tags:
  - feature
  - navigation
---
- runFlow:
    file: ../subflows/launch.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- runFlow:
    file: ../subflows/clear-next-class-banner.yaml

- setLocation:
    latitude: 45.495633
    longitude: -73.578902
- tapOn:
    id: "recenter-location-button"
- waitForAnimationToEnd

- tapOn:
    point: 50%, 18%
- waitForAnimationToEnd
- assertVisible: "Henry F. Hall Building.*"
- tapOn:
    id: "directions-button"

- assertVisible: "Directions"
- assertVisible: "Current Location"
- assertVisible: "Henry F. Hall Building"

- tapOn:
    point: 30%, 70%
- tapOn:
    point: 15%, 70%
- tapOn:
    id: "navigate-button"
    # point: 90%, 78%

- assertVisible:
    id: "indoor-map-canvas"
    optional: true
- tapOn:
    id: "indoor-back-button"
    optional: true

- assertVisible: "Walking.*"
- assertVisible: "Next in.*"
- assertVisible: ".*ETA"

- assertVisible:
    id: "cancel-navigation-button"

- tapOn:
    id: "cancel-navigation-button"
- assertNotVisible: "Turn right onto Blvd.*"

- runFlow:
    file: ../subflows/close-popup.yaml
