appId: com.conuwalks.app
tags:
  - feature
  - directions
---
- runFlow:
    file: ../subflows/launch.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- setLocation:
    latitude: 45.495633
    longitude: -73.578902
- tapOn:
    id: "recenter-location-button"
- waitForAnimationToEnd
- runFlow:
    file: ../subflows/clear-next-class-banner.yaml

- tapOn:
    point: 50%, 18%
- waitForAnimationToEnd
- assertVisible: "Henry F. Hall Building.*"
- tapOn:
    id: "directions-button"

- assertVisible: "Directions"
- assertVisible: "Current Location"
- assertVisible: "Henry F. Hall Building"

- assertVisible:
    id: "route-walking"
- tapOn:
    id: "navigate-button"
- waitForAnimationToEnd
- assertVisible:
    id: "indoor-map-canvas"
    optional: true
- tapOn:
    id: "indoor-back-button"
    optional: true
- assertVisible: "Walking.*"
- assertVisible:
    id: "cancel-navigation-button"
- tapOn:
    id: "cancel-navigation-button"
- waitForAnimationToEnd

# transit
- assertVisible:
    id: "route-transit"
- tapOn:
    id: "route-transit"
- tapOn:
    id: "navigate-button"
- waitForAnimationToEnd
- assertVisible:
    id: "indoor-map-canvas"
    optional: true
- tapOn:
    id: "indoor-back-button"
    optional: true
- assertVisible: "Transit.*"
- assertVisible:
    id: "cancel-navigation-button"
- tapOn:
    id: "cancel-navigation-button"
- waitForAnimationToEnd

# biking
- assertVisible:
    id: "route-bicycling"
- tapOn:
    id: "route-bicycling"
- tapOn:
    id: "navigate-button"
- waitForAnimationToEnd
- assertVisible:
    id: "indoor-map-canvas"
    optional: true
- tapOn:
    id: "indoor-back-button"
    optional: true
- assertVisible: "Bicycling.*"
- assertVisible:
    id: "cancel-navigation-button"
- tapOn:
    id: "cancel-navigation-button"
- waitForAnimationToEnd

# driving
- assertVisible:
    id: "route-driving"
- tapOn:
    id: "route-driving"
- tapOn:
    id: "navigate-button"
- waitForAnimationToEnd
- assertVisible:
    id: "indoor-map-canvas"
    optional: true
- tapOn:
    id: "indoor-back-button"
    optional: true
- assertVisible: "Driving.*"
- assertVisible:
    id: "cancel-navigation-button"
- tapOn:
    id: "cancel-navigation-button"
- waitForAnimationToEnd

- runFlow:
    file: ../subflows/close-popup.yaml
