appId: com.conuwalks.app
tags:
  - feature
  - directions
---
- runFlow:
    file: ../subflows/launch.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- setLocation:
    latitude: 45.495633
    longitude: -73.578902
- tapOn:
    id: "recenter-location-button"
- waitForAnimationToEnd

- tapOn:
    point: 66%, 80%

- assertVisible: "Faubourg Ste-Catherine Building"
- assertVisible: "Schedule"
- tapOn:
    id: "directions-button"
    # text: ".*min"

- assertVisible: "Current Location"
- assertVisible: "Directions"
- assertVisible: "Faubourg Ste-Catherine Building"
- assertVisible: ".*min"
- runFlow:
    file: ../subflows/close-popup.yaml
